espaço doo container e setando imagem inicial

--- a/src/app.css
+++ b/src/app.css
@@ -12,11 +12,17 @@
 
 }
 
+@media(max-width:800px){
+  .fullContainer{
+    flex-direction: column;
+  }
+}
+
 .imageContainer{
   display: flex;
   flex:4;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   background-color: blueviolet;
 }
 
