--- a/src/app.css
+++ b/src/app.css
@@ -7,16 +7,10 @@
 
 .fullContainer{
   display: flex;
-  width: 100vw;
   height: 94vh;
 
 }
 
-@media(max-width:800px){
-  .fullContainer{
-    flex-direction: column;
-  }
-}
 
 .imageContainer{
   display: flex;
@@ -27,7 +21,7 @@
 }
 
 .image{
-  width: 70%;
+  width: 80%;
 }
 
 .sidebar{
@@ -37,7 +31,27 @@
 
 }
 
+@media(max-width:800px){
+  .fullContainer{
+    flex-direction: column;
+    height: 100vh;
+    width: 100vw;
+  }
+  .image{
+    width: 90%;
+  }
+  .imageContainer{
+    width: 100%;
+    height: 100%;
+  }
+}
 
 
+@media(max-width:400px){
 
+  .image{
+    height: 60%;
+    width: 90%;
 
+  }
+}
