--- a/src/app.css
+++ b/src/app.css
@@ -45,6 +45,13 @@
     width: 100%;
     height: 100%;
   }
+  .sidebar{
+    flex-direction: row;
+    flex: none;
+    overflow-x: auto;
+    width: 100%;
+  }
+
 }
 
 
